engines/ep/src/vbucket.cc
@@ -406,6 +406,7 @@ VBucket::ItemsToFlush VBucket::getItemsToPersist(size_t approxLimit) {
                 result.items, ckptMgrLimit);
         result.ranges = std::move(ckptItems.ranges);
         result.highCompletedSeqno = ckptItems.highCompletedSeqno;
+        result.maxDeletedRevSeqno = ckptItems.maxDeletedRevSeqno;
         ckptItemsAvailable = ckptItems.moreAvailable;
         stats.persistenceCursorGetItemsHisto.add(
                 std::chrono::duration_cast<std::chrono::microseconds>(
